# jsfiddle-readme-generator.py

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
jsfiddle_readme_generator/: __init__.py  __main__.py
tests/jsfiddle_readme_generator/examples/cli/: run.sh
tests/jsfiddle_readme_generator/examples/cli/jsfiddle1/: README.md  demo.details
tests/jsfiddle_readme_generator/examples/cli/jsfiddle2/: README.md
