# https://pypi.org/project/setupcfg-generator/
[metadata]
name = jsfiddle-readme-generator
version = 2019.4.8
url = https://github.com/looking-for-a-job/jsfiddle-readme-generator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jsfiddle

[options]
install_requires = 
	PyYAML
	click
	jsfiddle_github
	markdown_table
	public
	setuptools
packages = 
	jsfiddle_readme_generator
